frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cusocial-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cusocial-frontend
  template:
    metadata:
      labels:
        app: cusocial-frontend
    spec:
      containers:
        - name: cusocial-frontend
          image: nihalsreenivasu/cusocial-frontend:v3.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"   # Specify the amount of memory your app needs
              cpu: "100m"      # Specify the amount of CPU your app needs
            limits:
              memory: "512Mi"   # Maximum memory your app can use
              cpu: "200m"      # Maximum CPU your app can use
