backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cusocial-backend
  labels:
    app: cusocial-backend
spec:
  selector:
    app: cusocial-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
